--- a/h1/h1.tex
+++ b/h1/h1.tex
@@ -19,6 +19,8 @@
 \usepackage{array}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{stmaryrd}
+
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{ltblue}{rgb}{0,0.4,0.4}
 \definecolor{dkblue}{rgb}{0,0.1,0.5}
@@ -139,6 +141,7 @@
 \newcommand{\course}{SPELL}
 \newcommand{\asnum}{1}
 \newcommand{\true}{\,\textsf{true}}
+\newcommand{\brs}[1]{\llbracket#1\rrbracket_\sigma}
 %
 
 \setcounter{section}{1}
@@ -351,8 +354,86 @@ Let's prove the following conclusion: DNE $\Rightarrow$ LEM $\Rightarrow$ A3 $\R
 
 Hence, we could say the DNE, LEM and A3 are equivalent extension to IPL.
 
+\subsection{The Main Theorem}
+
+In \cite{int}, we want to prove:
+
+\begin{theorem}
+    If $\Gamma \vdash_{I} P \true$ then $\Gamma \vdash_{C} P \true$.
+\end{theorem}
+
+and we introduced the method of \emph{truth table} to transform the theorem into:
+
+\[
+    \Gamma \vdash_{I} P \true \Rightarrow \forall_\sigma, \brs{\Gamma} \leq \brs{P}.
+\]
+
+We use the \emph{structural induction} on the derivation tree and we only need to prove the theorem on the bottom most rules.
+
+For example,
+
+\begin{theorem}
+    (\textbf{Assump}) $\forall_\sigma, \brs{\Gamma, A} \leq \brs{A}$.
+\end{theorem}
+
+\begin{proof}
+    By definition, it is equivalent to $\brs{\Gamma} \times \brs{A} \leq \brs{A}$.
+    If $\brs{A} = 1$, then $\brs{\Gamma}\leq 1 = \brs{A}$;
+    If $\brs{A} = 0$, then $0\leq 0$.
+\end{proof}
+
+Proofs for other rules are quite tedious and trivial.
+
+% \begin{theorem}
+%     ($\top$-\textbf{I}) $\forall_\sigma, \brs{\Gamma} \leq \brs{\top}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{\top} = 1$.
+% \end{proof}
+
+% \begin{theorem}
+%     ($\bot$-\textbf{E}) $\forall_\sigma, \brs{\Gamma} \leq \brs{\bot}\Rightarrow \brs{\Gamma} \leq \brs{A}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{\bot} = 0\leq \brs{A}$.
+% \end{proof}
+
+% \begin{theorem}
+%     ($\land$-\textbf{I}) $\forall_\sigma, \brs{\Gamma} \leq \brs{A} \land \brs{\Gamma} \leq \brs{B} \Rightarrow \brs{\Gamma}\leq \brs{A\land B}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{A\land B} = \brs{A} \times \brs{B}\geq \brs{\Gamma}$.
+% \end{proof}
+
+% \begin{theorem}
+%     ($\land$-\textbf{E1}) $\forall_\sigma, \brs{\Gamma} \leq \brs{A\land B} \Rightarrow \brs{\Gamma}\leq \brs{A}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{B}\leq 1\Rightarrow \brs{\Gamma}\leq \brs{A}$.
+% \end{proof}
+
+% \begin{theorem}
+%     ($\land$-\textbf{E2}) $\forall_\sigma, \brs{\Gamma} \leq \brs{A\land B} \Rightarrow \brs{\Gamma}\leq \brs{B}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{A}\leq 1\Rightarrow \brs{\Gamma}\leq \brs{B}$.
+% \end{proof}
+
+% \begin{theorem}
+%     ($\lor$-\textbf{I1}) $\forall_\sigma, \brs{\Gamma} \leq \brs{A} \Rightarrow \brs{\Gamma}\leq \brs{A\lor B}$.
+% \end{theorem}
+
+% \begin{proof}
+%     $\brs{A\lor B} = \brs{A} + \brs{B}$.
+% \end{proof}
+
 \subsection*{Appendix}
-The \emph{Coq} code for some theorems, all verified.
+The Coq code for some theorems, all verified.
 \lstinputlisting[language=Coq]{h1.v}
 % \end{spacing}
 
